feat: wrap all exceptions into GitCommandException