@@ -20,46 +20,52 @@ public class GitCommandExecutor {
      *
      * @param branchName The name of the branch to retrieve commits for.
      * @return List of commit hashes in reverse order, sorted from the latest to the oldest.
-     * @throws GitCommandException If Git command fails or the branch is invalid.
-     * @throws IOException If an I/O error occurs during process execution.
-     * @throws InterruptedException If the process is interrupted.
+     * @throws GitCommandException If the Git command fails or an I/O or interruption error occurs during the execution.
+     * This exception wraps underlying exceptions like {@link IOException} and {@link InterruptedException}
      */
-    public List<String> getCommitHistory(String branchName) throws GitCommandException, IOException, InterruptedException {
-            Process process = commandUtils.executeCommand(repo, List.of("git", "rev-list", branchName));
+    public List<String> getCommitHistory(String branchName) throws GitCommandException {
+            try {
+                Process process = commandUtils.executeCommand(repo, List.of("git", "rev-list", branchName));
+
+                String output = commandUtils.readOutput(process.getInputStream());
+                String errorOutput = commandUtils.readOutput(process.getErrorStream());
+
+                int exitCode = process.waitFor();
+                if (exitCode != 0) {
+                    throw new GitCommandException(String.format("Git rev-list command failed for branch: %s. Error: %s", branchName, errorOutput));
+                }
+
+                return Arrays.asList(output.split("\n"));
+            } catch (IOException | InterruptedException e) {
+                throw new GitCommandException(String.format("Git rev-list command failed for branch: %s. Error: %s", branchName, e));
+            }
+    }
+
+    /**
+     * Retrieves the list of files modified between two commits.
+     *
+     * @param commit1 The first commit hash.
+     * @param commit2 The second commit hash.
+     * @return List of modified file paths.
+     * @throws GitCommandException If the Git command fails or an I/O or interruption error occurs during the execution.
+     * This exception wraps underlying exceptions like {@link IOException} and {@link InterruptedException}
+     */
+    public List<String> getModifiedFilesNames(String commit1, String commit2) throws GitCommandException {
+        try {
+            Process process = commandUtils.executeCommand(repo, List.of("git", "diff", "--name-only", commit1, commit2));
 
             String output = commandUtils.readOutput(process.getInputStream());
             String errorOutput = commandUtils.readOutput(process.getErrorStream());
 
             int exitCode = process.waitFor();
             if (exitCode != 0) {
-                throw new GitCommandException(String.format("Git rev-list command failed for branch: %s. Error: %s", branchName, errorOutput));
+                throw new GitCommandException(String.format("Git diff --name-only command failed for commits: %s and %s. Error: %s", commit1, commit2, errorOutput));
             }
 
             return Arrays.asList(output.split("\n"));
-    }
-
-    /**
-     * Retrieves the list of files modified between 2 commits.
-     *
-     * @param commit1 The first commit hash.
-     * @param commit2 The second commit hash.
-     * @return List of modified file paths.
-     * @throws GitCommandException If Git command fails.
-     * @throws IOException If an I/O error occurs during process execution.
-     * @throws InterruptedException If the process is interrupted.
-     */
-    public List<String> getModifiedFilesNames(String commit1, String commit2) throws GitCommandException, IOException, InterruptedException {
-        Process process = commandUtils.executeCommand(repo, List.of("git", "diff", "--name-only", commit1, commit2));
-
-        String output = commandUtils.readOutput(process.getInputStream());
-        String errorOutput = commandUtils.readOutput(process.getErrorStream());
-
-        int exitCode = process.waitFor();
-        if (exitCode != 0) {
-            throw new GitCommandException(String.format("Git diff --name-only command failed commits: %s and %s. Error: %s", commit1, commit2, errorOutput));
+        } catch (IOException | InterruptedException e) {
+            throw new GitCommandException(String.format("Git diff --name-only command failed for commits: %s and %s. Error: %s", commit1, commit2, e));
         }
-
-        return Arrays.asList(output.split("\n"));
     }
 
     /**
